--- a/source/stylesheets/pages/_home.scss
+++ b/source/stylesheets/pages/_home.scss
@@ -1,1 +1,8 @@
 // Specific CSS for your home-page
+body {
+  background-image: repeating-linear-gradient(150deg, #39b4da, #e172e9);
+  background-repeat: no-repeat;
+  font-family: 'Open Sans', sans-serif;
+  color: #25316D;
+  line-height: 24px;
+}
