--- a/source/partials/banner.html.erb
+++ b/source/partials/banner.html.erb
@@ -1,6 +1,11 @@
-<div class="row justify-content-center banner">
-  <div class="col-12 d-flex flex-column justify-content-center align-items-center h-100">
-    <%= image_tag 'placeholder.png', alt: "profile photo", class: 'avatar' %>
-    <h1 class="title-main">Portfolio</h1>
+<div class="container">
+  <div class="profile-card">
+    <div class="profile-container">
+      <%= image_tag 'profile.jpg', alt: "profile photo", class: 'profile-pic' %>
+      <h1 class="title-main">Clement Choi</h1>
+      <h5>Web Developer</h5>
+      <h5>Tokyo, Japan</h5>
+      <h5>English, Japanese, Chinese, Cantonese</h5>
+    </div>
   </div>
 </div>
