--- a/source/partials/about.html.erb
+++ b/source/partials/about.html.erb
@@ -2,8 +2,8 @@
   <div class="col-12">
     <div class="container">
       <div id="about">
-        <h2>About</h2>
-        <p>Originally from Hong Kong, moved to Tokyo 2 years ago.
+        <h2 class="emphasis">About</h2>
+        <p>Originally from Hong Kong and graduated from the University of Hong Kong, moved to Tokyo 2 years ago.
           Having working in the finance field for a couple of years, I am eager and deticated to dive into a new field in programming and web development after completing a 9-week intensive bootcamp at Le Wagon.</p>
       </div>
     </div>
