--- a/source/stylesheets/components/_cards.scss
+++ b/source/stylesheets/components/_cards.scss
@@ -5,15 +5,21 @@
   margin-top: 25px;
 }
 
-.profile-container {
-  width: 750px;
-  margin: 0 auto;
-}
-
 .cards {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-gap: 16px;
+}
+
+.list-inline > li {
+  display: inline-block;
+  padding: 0px 16px;
+  font-size: 24px;
+}
+
+.list-inline {
+  list-style: none;
+  padding-left: 0px;
 }
 
 .card-product {
