--- a/source/stylesheets/pages/_home.scss
+++ b/source/stylesheets/pages/_home.scss
@@ -6,5 +6,55 @@ body {
   -o-background-size: cover;
   background-size: cover;
   font-family: 'Open Sans', sans-serif;
-  color: #25316D;
+}
+
+.emphasis {
+  color: $emphasis;
+}
+
+a:-webkit-any-link {
+  text-decoration: none;
+}
+
+@media (max-width: 960px) {
+  /* For a screen < 960px, this CSS will be read */
+  .container {
+    width: 600px;
+  }
+}
+
+@media (max-width: 720px) {
+  /* For a screen < 720px, this CSS will be read */
+  .container {
+    width: 400px;
+  }
+}
+
+@media (max-width: 540px) {
+  /* For a screen < 540px, this CSS will be read */
+  .container {
+    width: 250px;
+  }
+
+  img {
+    height: 100px;
+    width: 100px;
+  }
+
+  h1 {
+    font-size: 24px;
+  }
+
+  h2 {
+    font-size: 16px;
+  }
+
+  p {
+    font-size: 12px;
+  }
+
+  .btn-purple {
+    padding: 5px 10px;
+    font-size: 12px;
+  }
 }
