--- a/source/stylesheets/components/_button.scss
+++ b/source/stylesheets/components/_button.scss
@@ -1,10 +1,21 @@
 .button-social {
+  color: $emphasis;
   padding: 0 16px;
   position: relative;
   font-size: 20px;
 
   &:hover {
-    opacity: 0.7;
+    color: $purple;
+    transition: 0.5s;
+  }
+}
+
+.icon-social {
+  color: $emphasis;
+
+  &:hover {
+    color: $purple;
+    transition: 0.5s;
   }
 }
 
@@ -17,14 +28,26 @@
 }
 
 .btn-purple {
-  background-color: #70488c;
+  background-color: $emphasis;
   color: white;
   padding: 2px 8px;
   border-radius: 4px;
+  font-size: 20px;
 }
 
 .btn-purple:hover {
-  background-color: #5C2E7E;
-  transition: 0.75s;
+  background-color: $purple;
+  transition: 0.5s;
   color: white;
+}
+
+.list-inline > li {
+  display: inline-block;
+  padding: 0px 16px;
+  font-size: 24px;
+}
+
+.list-inline {
+  list-style: none;
+  padding-left: 0px;
 }
