about and skills

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,7 +2,11 @@
   <!-- Banner Section -->
   <%= partial 'partials/banner' %>
   <!-- About Section -->
-  <%= partial 'partials/about' %>
+  <div class="mt-5 row justify-content-around">
+    <%= partial 'partials/about' %>
+    <!-- Skills Section -->
+    <%= partial 'partials/skills' %>
+  </div>
   <!-- Projects Section -->
   <%= partial 'partials/projects' %>
   <!-- Social Links Section -->
