--- a/source/partials/about.html.erb
+++ b/source/partials/about.html.erb
@@ -1,11 +1,5 @@
-<div class="row my-5">
-  <div class="col-12">
-    <div class="container">
-      <div id="about">
-        <h2 class="emphasis">About</h2>
-        <p>Originally from Hong Kong and graduated from the University of Hong Kong, moved to Tokyo 2 years ago.
-          Having working in the finance field for a couple of years, I am eager and deticated to dive into a new field in programming and web development after completing a 9-week intensive bootcamp at Le Wagon.</p>
-      </div>
-    </div>
-  </div>
+<div class="profile-card col-5">
+  <h2 class="emphasis mt-3 mb-5"><i class="fa-regular fa-comment-dots"></i> About</h2>
+  <p>Originally from Hong Kong and graduated from the University of Hong Kong, moved to Tokyo 2 years ago.</p>
+  <p>Having working in the finance field for a couple of years, I am eager and deticated to dive into a new field in programming and web development after completing a 9-week intensive bootcamp at Le Wagon.</p>
 </div>
