--- a/source/partials/banner.html.erb
+++ b/source/partials/banner.html.erb
@@ -4,14 +4,14 @@
       <%= image_tag 'profile.jpg', alt: "profile photo", class: 'profile-pic align-middle' %>
     </div>
     <div class="col-4">
-      <h1 style="font-size: 60px" class="emphasis mb-3"> Clement Choi</h1>
+      <h1 style="font-size: 60px" class="emphasis mt-5 mb-3"> Clement Choi</h1>
       <div class="d-flex justify-content-between">
         <p><i class="fa-solid fa-laptop emphasis"></i> Web Developer</p>
         <p><i class="fa-solid fa-location-dot emphasis"></i> Tokyo, Japan</p>
         <p></p>
       </div>
       <p><i class="fa-solid fa-language emphasis"></i> English, Japanese, Chinese, Cantonese</p>
-      <ul class="list-inline">
+      <ul class="list-inline mb-5">
         <li class="button-social"><i class="fa-solid fa-envelope"></i><%= mail_to "clementchoi1997@gmail.com", "", class: 'button-social-link' %></li>
         <li><a href="https://github.com/clementckmc" target="_blank" class="icon-social"><i class="fa-brands fa-github"></i></a></li>
         <li><a href="https://www.linkedin.com/in/clement-choi/" target="_blank" class="icon-social"><i class="fa-brands fa-linkedin"></i></a></li>
