--- a/source/partials/projects.html.erb
+++ b/source/partials/projects.html.erb
@@ -5,18 +5,17 @@
         <h2 class="emphasis mt-3 mb-3"><i class="fa-solid fa-diagram-project"></i> Projects</h2>
         <div class="cards mt-3 mb-3">
           <% data.projects.each do |project| %>
-            <div class="card-product">
-              <%= image_tag project.image, alt: "project image" %>
-              <div class="card-product-infos w-100">
-                <div class="d-flex justify-content-between align-items-center">
-                  <h2><%= project.name %></h2>
-                  <% link_to project.url, class: 'external-link', target: '_blank' do %>
-                    <i class="fas fa-external-link-alt"></i>
-                  <% end %>
+            <% link_to project.url, target: '_blank' do %>
+              <div class="card mt-3 mb-3" style="width: 20rem;">
+                <%= image_tag project.image, alt: "project image", class: "card-img-top" %>
+                <div class="card-body">
+                  <div class="d-flex justify-content-between align-items-center">
+                    <h2 class="emphasis" style="font-size: 1.5rem;"><%= project.name %></h2>
+                  </div>
+                  <p class="description"><%= project.description %></p>
                 </div>
-                <p><%= project.description %></p>
               </div>
-            </div>
+            <% end %>
           <% end %>
         </div>
       </div>
