--- a/source/partials/projects.html.erb
+++ b/source/partials/projects.html.erb
@@ -8,11 +8,16 @@
             <% link_to project.url, target: '_blank' do %>
               <div class="card mt-3 mb-3" style="width: 20rem;">
                 <%= image_tag project.image, alt: "project image", class: "card-img-top" %>
-                <div class="card-body">
+                <div class="d-flex card-body align-items-start flex-column">
                   <div class="d-flex justify-content-between align-items-center">
                     <h2 class="emphasis" style="font-size: 1.5rem;"><%= project.name %></h2>
                   </div>
                   <p class="description"><%= project.description %></p>
+                  <div class="mt-auto">
+                    <% project.techs.each do |tech| %>
+                      <span class="badge bg-primary tech"><%= tech %></span>
+                    <% end %>
+                  </div>
                 </div>
               </div>
             <% end %>
