--- a/source/partials/skills.html.erb
+++ b/source/partials/skills.html.erb
@@ -25,5 +25,6 @@
     <i class="devicon-github-original-wordmark colored prog-icon"></i>
     <i class="devicon-figma-plain colored prog-icon"></i>
     <i class="devicon-trello-plain-wordmark colored prog-icon"></i>
+    <i class="devicon-graphql-plain-wordmark colored prog-icon"></i>
   </p>
 </div>
