--- a/source/jp/index.html.erb
+++ b/source/jp/index.html.erb
@@ -1,13 +1,12 @@
 <div class="container ">
-  <!-- Language Select -->
   <!-- Banner Section -->
-  <%= partial 'partials/banner' %>
+  <%= partial 'banner' %>
   <div class="mt-3 row justify-content-around">
     <!-- About Section -->
-    <%= partial 'partials/about' %>
+    <%= partial 'about' %>
     <!-- Skills Section -->
-    <%= partial 'partials/skills' %>
+    <%= partial 'skills' %>
   </div>
   <!-- Projects Section -->
-  <%= partial 'partials/projects' %>
+  <%= partial 'projects' %>
 </div>
