--- a/source/jp/index.html.erb
+++ b/source/jp/index.html.erb
@@ -1,8 +1,8 @@
 <div class="container ">
   <!-- Language Select -->
   <div class="btn-group" role="group" aria-label="Basic mixed styles example">
-    <%= link_to 'English', '/', {class: "btn btn-primary"} %>
-    <%= link_to '日本語', '/jp', {class: "btn btn-primary active"} %>
+    <%= link_to 'English', '/', {class: "btn btn-primary btn-lang"} %>
+    <%= link_to '日本語', '/jp', {class: "btn btn-primary btn-lang-active"} %>
   </div>
   <!-- Banner Section -->
   <%= partial 'banner' %>
