--- a/source/jp/banner.html.erb
+++ b/source/jp/banner.html.erb
@@ -17,7 +17,7 @@
         <li><a href="https://github.com/clementckmc" target="_blank" class="icon-social"><i class="fa-brands fa-github"></i></a></li>
         <li><a href="https://www.linkedin.com/in/clement-choi/" target="_blank" class="icon-social"><i class="fa-brands fa-linkedin"></i></a></li>
         <li><a href="https://www.wantedly.com/id/clement_choi" target="_blank" class="icon-social"><%= image_tag "wantedly.png", class: "wantedly" %></a></li>
-        <li><a href="docs/CV.pdf" class="btn-purple" download>CV</a></li>
+        <%# <li><a href="docs/CV.pdf" class="btn-purple" download>CV</a></li> %>
       </ul>
     </div>
   </div>
