job status update

--- a/source/partials/banner.html.erb
+++ b/source/partials/banner.html.erb
@@ -6,7 +6,7 @@
     <div class="col-4">
       <h1 style="font-size: 60px" class="emphasis mt-5 mb-3"> Clement Choi</h1>
       <div class="d-flex justify-content-between">
-        <p><i class="fa-solid fa-laptop emphasis"></i> Web Developer</p>
+        <p><i class="fa-solid fa-laptop emphasis"></i> Web Application Engineer at teamLab</p>
         <p><i class="fa-solid fa-location-dot emphasis"></i> Tokyo, Japan</p>
         <p></p>
       </div>
