--- a/source/jp/banner.html.erb
+++ b/source/jp/banner.html.erb
@@ -7,7 +7,7 @@
       <h1 style="font-size: 60px" class="emphasis mt-5 mb-3"> Clement Choi</h1>
       <h1 style="font-size: 48px" class="emphasis mb-3">クレメント　サイ</h1>
       <div class="d-flex justify-content-between">
-        <p><i class="fa-solid fa-laptop emphasis"></i> Webエンジニア</p>
+        <p><i class="fa-solid fa-laptop emphasis"></i> Webアプリエンジニア</p>
         <p><i class="fa-solid fa-location-dot emphasis"></i> 東京</p>
         <p></p>
       </div>
