--- a/source/partials/banner.html.erb
+++ b/source/partials/banner.html.erb
@@ -6,10 +6,11 @@
     <div class="col-4">
       <h1 style="font-size: 60px" class="emphasis mt-5 mb-3"> Clement Choi</h1>
       <div class="d-flex justify-content-between">
-        <p><i class="fa-solid fa-laptop emphasis"></i> Web Application Engineer at teamLab</p>
+        <p><i class="fa-solid fa-laptop emphasis"></i> Web Application Engineer</p>
         <p><i class="fa-solid fa-location-dot emphasis"></i> Tokyo, Japan</p>
         <p></p>
       </div>
+      <p><i class="fa-solid fa-briefcase emphasis"></i> teamLab</p>
       <p><i class="fa-solid fa-language emphasis"></i> English, Japanese, Chinese, Cantonese</p>
       <ul class="list-inline mb-5">
         <li class="button-social"><i class="fa-solid fa-envelope"></i><%= mail_to "clementchoi1997@gmail.com", "", class: 'button-social-link' %></li>
