--- a/source/partials/skills.html.erb
+++ b/source/partials/skills.html.erb
@@ -14,6 +14,7 @@
     <i class="devicon-rails-plain-wordmark colored prog-icon"></i>
     <i class="devicon-python-plain-wordmark colored prog-icon"></i>
     <i class="devicon-django-plain-wordmark colored prog-icon"></i>
+    <i class="devicon-typescript-plain colored prog-icon"></i>
     <i class="devicon-heroku-plain-wordmark colored prog-icon"></i>
     <i class="devicon-sqlite-plain-wordmark colored prog-icon"></i>
     <i class="devicon-postgresql-plain-wordmark colored prog-icon"></i>
