feat: add Medium link

--- a/source/jp/banner.html.erb
+++ b/source/jp/banner.html.erb
@@ -17,6 +17,7 @@
         <li class="button-social"><i class="fa-solid fa-envelope"></i><%= mail_to "clementchoi1997@gmail.com", "", class: 'button-social-link' %></li>
         <li><a href="https://github.com/clementckmc" target="_blank" class="icon-social"><i class="fa-brands fa-github"></i></a></li>
         <li><a href="https://www.linkedin.com/in/clement-choi/" target="_blank" class="icon-social"><i class="fa-brands fa-linkedin"></i></a></li>
+        <li><a href="https://medium.com/@clementchoi-rb" target="_blank" class="icon-social"><i class="fa-brands fa-medium"></i></a></li>
         <li><a href="https://www.wantedly.com/id/clement_choi" target="_blank" class="icon-social"><%= image_tag "wantedly.png", class: "wantedly" %></a></li>
         <%# <li><a href="docs/CV.pdf" class="btn-purple" download>CV</a></li> %>
       </ul>
