--- a/source/partials/skills.html.erb
+++ b/source/partials/skills.html.erb
@@ -21,6 +21,7 @@
   </p>
   <p class="emphasis">Others</p>
   <p>
+    <i class="devicon-amazonwebservices-plain-wordmark colored prog-icon"></i>
     <i class="devicon-git-plain-wordmark colored prog-icon"></i>
     <i class="devicon-github-original-wordmark colored prog-icon"></i>
     <i class="devicon-figma-plain colored prog-icon"></i>
