--- a/source/jp/skills.html.erb
+++ b/source/jp/skills.html.erb
@@ -1,30 +1,27 @@
 <div class="profile-card col-5">
   <h2 class="emphasis mt-3 mb-3"><i class="fa-solid fa-code"></i> Skills</h2>
-  <p class="emphasis">フロントエンド</p>
+  <p class="emphasis">言語</p>
   <p>
+    <i class="devicon-javascript-plain colored prog-icon"></i>
+    <i class="devicon-typescript-plain colored prog-icon"></i>
+    <i class="devicon-ruby-plain-wordmark colored prog-icon"></i>
+    <i class="devicon-python-plain-wordmark colored prog-icon"></i>
     <i class="devicon-html5-plain-wordmark colored prog-icon"></i>
     <i class="devicon-css3-plain-wordmark colored prog-icon"></i>
-    <i class="devicon-sass-original colored prog-icon"></i>
-    <i class="devicon-javascript-plain colored prog-icon"></i>
-    <i class="devicon-bootstrap-plain-wordmark colored prog-icon"></i>
-  </p>
-  <p class="emphasis">バックエンド</p>
-  <p>
-    <i class="devicon-ruby-plain-wordmark colored prog-icon"></i>
-    <i class="devicon-rails-plain-wordmark colored prog-icon"></i>
-    <i class="devicon-python-plain-wordmark colored prog-icon"></i>
-    <i class="devicon-django-plain-wordmark colored prog-icon"></i>
-    <i class="devicon-typescript-plain colored prog-icon"></i>
-    <i class="devicon-heroku-plain-wordmark colored prog-icon"></i>
     <i class="devicon-sqlite-plain-wordmark colored prog-icon"></i>
-    <i class="devicon-postgresql-plain-wordmark colored prog-icon"></i>
+  </p>
+  <p class="emphasis">フレームワーク</p>
+  <p>
+    <i class="devicon-nodejs-plain-wordmark prog-icon"></i>
+    <i class="devicon-rails-plain-wordmark colored prog-icon"></i>
+    <i class="devicon-django-plain-wordmark colored prog-icon"></i>
+    <i class="devicon-bootstrap-plain-wordmark colored prog-icon"></i>
   </p>
   <p class="emphasis">その他</p>
   <p>
     <i class="devicon-amazonwebservices-plain-wordmark colored prog-icon"></i>
     <i class="devicon-git-plain-wordmark colored prog-icon"></i>
     <i class="devicon-github-original-wordmark colored prog-icon"></i>
-    <i class="devicon-figma-plain colored prog-icon"></i>
-    <i class="devicon-trello-plain-wordmark colored prog-icon"></i>
+    <i class="devicon-heroku-plain-wordmark colored prog-icon"></i>
   </p>
 </div>
