comment out outdated info

--- a/source/jp/about.html.erb
+++ b/source/jp/about.html.erb
@@ -2,5 +2,5 @@
   <h2 class="emphasis mt-3 mb-5"><i class="fa-regular fa-comment-dots"></i> About</h2>
   <p>香港出身。2020年から東京在住。 チームラボWebアプリエンジニア。</p>
   <%# <p>金融業界からキャリアをスタートし、Le Wagon Tokyoのウェブ開発コースに参加し、現在はWeb エンジニアへの転職を目指すため、日々勉強し続けている。</p> %>
-  <p>主にRuby on Rails, Djangoフレームワークを使用している。</p>
+  <%# <p>主にRuby on Rails, Djangoフレームワークを使用している。</p> %>
 </div>
