--- a/source/partials/skills.html.erb
+++ b/source/partials/skills.html.erb
@@ -10,17 +10,15 @@
     <i class="devicon-css3-plain-wordmark colored prog-icon"></i>
     <i class="devicon-sqlite-plain-wordmark colored prog-icon"></i>
   </p>
-  <p class="emphasis">Frameworks</p>
+  <p class="emphasis">Technologies</p>
   <p>
     <i class="devicon-rails-plain-wordmark colored prog-icon"></i>
     <i class="devicon-django-plain-wordmark colored prog-icon"></i>
-    <i class="devicon-bootstrap-plain-wordmark colored prog-icon"></i>
-  </p>
-  <p class="emphasis">Others</p>
-  <p>
+    <i class="devicon-nodejs-plain-wordmark colored prog-icon"></i>
+    <i class="devicon-react-original-wordmark colored prog-icon"></i>
     <i class="devicon-amazonwebservices-plain-wordmark colored prog-icon"></i>
+    <i class="devicon-jest-plain colored prog-icon"></i>
+    <i class="devicon-bootstrap-plain-wordmark colored prog-icon"></i>
     <i class="devicon-git-plain-wordmark colored prog-icon"></i>
-    <i class="devicon-github-original-wordmark colored prog-icon"></i>
-    <i class="devicon-heroku-plain-wordmark colored prog-icon"></i>
   </p>
 </div>
