feat: mobile responsive

--- a/source/partials/banner.html.erb
+++ b/source/partials/banner.html.erb
@@ -3,7 +3,7 @@
     <div class="col-4 text-center">
       <%= image_tag 'profile.jpg', alt: "profile photo", class: 'profile-pic align-middle' %>
     </div>
-    <div class="col-4">
+    <div class="col-4 banner-text">
       <h1 style="font-size: 60px" class="emphasis mt-5 mb-3"> Clement Choi</h1>
       <div class="d-flex justify-content-between">
         <p><i class="fa-solid fa-laptop emphasis"></i> Backend/Full-stack Developer</p>
