--- a/source/jp/banner.html.erb
+++ b/source/jp/banner.html.erb
@@ -3,7 +3,7 @@
     <div class="col-4 text-center">
       <%= image_tag 'profile.jpg', alt: "profile photo", class: 'profile-pic align-middle' %>
     </div>
-    <div class="col-4">
+    <div class="col-4 banner-text">
       <h1 style="font-size: 60px" class="emphasis mt-5 mb-3"> Clement Choi</h1>
       <h1 style="font-size: 48px" class="emphasis mb-3">クレメント　サイ</h1>
       <div class="d-flex justify-content-between">
