--- a/source/partials/skills.html.erb
+++ b/source/partials/skills.html.erb
@@ -1,7 +1,7 @@
 <div class="profile-card col-5">
   <h2 class="emphasis mt-3 mb-3"><i class="fa-solid fa-code"></i> Skills</h2>
   <p class="emphasis">Languages</p>
-  <p>
+  <p class="skill-icons">
     <i class="devicon-javascript-plain colored prog-icon"></i>
     <i class="devicon-typescript-plain colored prog-icon"></i>
     <i class="devicon-ruby-plain-wordmark colored prog-icon"></i>
@@ -11,7 +11,7 @@
     <i class="devicon-sqlite-plain-wordmark colored prog-icon"></i>
   </p>
   <p class="emphasis">Technologies</p>
-  <p>
+  <p class="skill-icons">
     <i class="devicon-rails-plain-wordmark colored prog-icon"></i>
     <i class="devicon-django-plain-wordmark colored prog-icon"></i>
     <i class="devicon-nodejs-plain-wordmark colored prog-icon"></i>
