fix: Eng page mobile

--- a/source/partials/projects.html.erb
+++ b/source/partials/projects.html.erb
@@ -15,7 +15,7 @@
                   <p class="description"><%= project.description %></p>
                   <div class="mt-auto">
                     <% project.techs.each do |tech| %>
-                      <span class="badge bg-primary tech"><%= tech %></span>
+                      <span class="badge bg-primary tech my-1"><%= tech %></span>
                     <% end %>
                   </div>
                 </div>
