feat: change color to =love ver

--- a/source/stylesheets/pages/_home.scss
+++ b/source/stylesheets/pages/_home.scss
@@ -1,6 +1,6 @@
 // Specific CSS for your home-page
 body {
-  background: repeating-linear-gradient(150deg, #2DB79F, #E2E2E2) no-repeat center center fixed;
+  background: repeating-linear-gradient(150deg, #C9DFF0, #FFFFFF) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
