--- a/source/stylesheets/components/_button.scss
+++ b/source/stylesheets/components/_button.scss
@@ -69,8 +69,9 @@
 }
 
 .btn-lang-active {
-  background-color: #2DB79F !important;
+  background-color: #CAE1F5 !important;
   border-color: $emphasis !important;
+  color: #fffffff0;
   &:hover {
     filter: brightness(95%);
     transition: 0.5s;
