career status update

--- a/source/jp/about.html.erb
+++ b/source/jp/about.html.erb
@@ -1,5 +1,5 @@
 <div class="profile-card col-5">
   <h2 class="emphasis mt-3 mb-5"><i class="fa-regular fa-comment-dots"></i> About</h2>
-  <p>香港出身。2020年から東京在住。金融業界からキャリアをスタートし、現在はチームラボWebアプリエンジニア。</p>
+  <p>香港出身。2020年に来日し、東京を拠点に活動しています。金融業界でのキャリアを経て、現在はWebアプリエンジニアとして働いています。</p>
   <p>仕事では主にTypeScript（Node.js）とAWSを使用しています。個人のプロジェクトでは、Ruby on RailsやDjangoを使用しています。</p>
 </div>
