--- a/source/partials/about.html.erb
+++ b/source/partials/about.html.erb
@@ -1,6 +1,6 @@
 <div class="profile-card col-5">
   <h2 class="emphasis mt-3 mb-5"><i class="fa-regular fa-comment-dots"></i> About</h2>
   <p>Originally from Hong Kong and graduated from the University of Hong Kong, moved to Tokyo in 2020.</p>
-  <p>Work for teamLab since 2023. Previously worked in the banking industry for a couple of years.</p>
+  <p>Work as a Full-stack developer since 2023. Previously worked in the banking industry for a couple of years.</p>
   <p>At work, I primarily use TypeScript (Node.js) and AWS. For personal projects, I work with Ruby on Rails and Django.</p>
 </div>
