--- a/source/jp/banner.html.erb
+++ b/source/jp/banner.html.erb
@@ -11,7 +11,7 @@
         <p><i class="fa-solid fa-location-dot emphasis"></i> 東京</p>
         <p></p>
       </div>
-      <p><i class="fa-solid fa-briefcase emphasis"></i> チームラボ</p>
+      <p><i class="fa-solid fa-briefcase emphasis"></i> Zaiko</p>
       <p><i class="fa-solid fa-language emphasis"></i> 英語、日本語、中国語（北京語、広東語）</p>
       <ul class="list-inline mb-5">
         <li class="button-social"><i class="fa-solid fa-envelope"></i><%= mail_to "clementchoi1997@gmail.com", "", class: 'button-social-link' %></li>
