--- a/source/partials/banner.html.erb
+++ b/source/partials/banner.html.erb
@@ -10,7 +10,7 @@
         <p><i class="fa-solid fa-location-dot emphasis"></i> Tokyo, Japan</p>
         <p></p>
       </div>
-      <p><i class="fa-solid fa-briefcase emphasis"></i> teamLab</p>
+      <p><i class="fa-solid fa-briefcase emphasis"></i> Zaiko</p>
       <p><i class="fa-solid fa-language emphasis"></i> English, Japanese, Chinese, Cantonese</p>
       <ul class="list-inline mb-5">
         <li class="button-social"><i class="fa-solid fa-envelope"></i><%= mail_to "clementchoi1997@gmail.com", "", class: 'button-social-link' %></li>
