feat: php and vue under skills

--- a/source/jp/skills.html.erb
+++ b/source/jp/skills.html.erb
@@ -6,6 +6,7 @@
     <i class="devicon-typescript-plain colored prog-icon"></i>
     <i class="devicon-ruby-plain-wordmark colored prog-icon"></i>
     <i class="devicon-python-plain-wordmark colored prog-icon"></i>
+    <i class="devicon-php-plain colored prog-icon"></i>
     <i class="devicon-html5-plain-wordmark colored prog-icon"></i>
     <i class="devicon-css3-plain-wordmark colored prog-icon"></i>
     <i class="devicon-sqlite-plain-wordmark colored prog-icon"></i>
@@ -15,6 +16,7 @@
     <i class="devicon-rails-plain-wordmark colored prog-icon"></i>
     <i class="devicon-django-plain-wordmark colored prog-icon"></i>
     <i class="devicon-nodejs-plain-wordmark colored prog-icon"></i>
+    <i class="devicon-vuejs-plain-wordmark colored prog-icon"></i>
     <i class="devicon-react-original-wordmark colored prog-icon"></i>
     <i class="devicon-amazonwebservices-plain-wordmark colored prog-icon"></i>
     <i class="devicon-jest-plain colored prog-icon"></i>
