--- a/source/stylesheets/components/_button.scss
+++ b/source/stylesheets/components/_button.scss
@@ -63,7 +63,7 @@
   color: black;
   &:hover {
     filter: brightness(95%);
-    color: rgb(58, 56, 56);
+    color: #e04284f0;
     transition: 0.5s;
   }
 }
@@ -71,9 +71,10 @@
 .btn-lang-active {
   background-color: #CAE1F5 !important;
   border-color: $emphasis !important;
-  color: #fffffff0;
+  color: #e04284f0;
   &:hover {
     filter: brightness(95%);
+    color: black;
     transition: 0.5s;
   }
 }
