button color ver noime

--- a/source/jp/banner.html.erb
+++ b/source/jp/banner.html.erb
@@ -19,7 +19,7 @@
         <li><a href="https://www.linkedin.com/in/clement-choi/" target="_blank" class="icon-social"><i class="fa-brands fa-linkedin"></i></a></li>
         <li><a href="https://medium.com/@clementchoi-rb" target="_blank" class="icon-social"><i class="fa-brands fa-medium"></i></a></li>
         <li><a href="https://www.wantedly.com/id/clement_choi" target="_blank" class="icon-social"><%= image_tag "wantedly.png", class: "wantedly" %></a></li>
-        <li><a href="docs/Japanese_CV_Choi.pdf" class="btn-purple" download>CV</a></li>
+        <li><a href="docs/Japanese_CV_Choi.pdf" class="btn-download" download>CV</a></li>
       </ul>
     </div>
   </div>
