--- a/source/stylesheets/pages/_home.scss
+++ b/source/stylesheets/pages/_home.scss
@@ -57,7 +57,7 @@ a:-webkit-any-link {
     font-size: 16px;
   }
 
-  .btn-purple {
+  .btn-download {
     padding: 5px 10px;
     font-size: 12px;
   }
